--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -58,9 +58,9 @@
         </menu>
     </header>
 
-    <header class="flex flex-col bg-[#F6F0E4] items-center w-full sticky top-[0px]">
+    <header class="flex flex-col bg-[#F6F0E4] items-center w-full sticky top-[0px] z-50">
         <div
-            class="hidden md:flex flex-row justify-between items-center w-full px-[104px] py-[28px] z-50 max-w-[1280px]">
+            class="hidden md:flex flex-row justify-between items-center w-full px-[104px] py-[28px]  max-w-[1280px]">
             <div>
                 <a href="/">
                     {% render 'logo-milk-denmark-large' %}
