--- a/sections/collections.liquid
+++ b/sections/collections.liquid
@@ -95,42 +95,42 @@
         <div class="flex flex-col gap-[24px]">
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-1 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-1 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Pane collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A bold, yet animated, sleepwear collection
                             reminiscent of the <br> window pane and steeped in color surprise.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
                 <div
-                    class="collection-c-2 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-2 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Tuft collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
                             wishflowers and pillow<br>soft colors.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
             </div>
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-3 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-3 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Blossom collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">A feminine flow of garden fancies,<br>sweetly
                             dotting our wearables in ribbed<br> and flat cotton.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
                 <div
-                    class="collection-c-4 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-4 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Wildflower<br
                                 class="md:hidden">
@@ -139,36 +139,35 @@
                             wildflower
                             sprigs<br>fascinate every phase of infanthood for unisex wearables.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
             </div>
             <div class="flex flex-col lg:flex-row gap-[24px]">
                 <div
-                    class="collection-c-5 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
+                    class="collection-c-5 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:min-w-[650px]">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Foilage collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">Our berry and brush toned play sets introduce
                             deeper hues with<br>the very same iconic softness designed for little ones.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
                 <div
-                    class="collection-c-6 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
+                    class="collection-c-6 transition-all ease-in-out duration-300 h-[360px] lg:h-[600px] rounded-2xl flex flex-col gap-[24px] justify-center items-center lg:w-full">
                     <div class="text-center text-white flex flex-col gap-2">
                         <h1 class="font-semibold text-[28px] lg:text-[32px] lg:leading-10">Fall collection</h1>
                         <p class="hidden lg:block text-[20px] leading-6">An iconic sleepwear collection,<br>comprised of
                             wishflowers and pillow<br>soft colors.</p>
                     </div>
-                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px]">
+                    <a href="#" class="bg-white btn-collection px-[24px] py-[20px] btn-shop">
                         SHOP COLLECTION
                     </a>
                 </div>
             </div>
         </div>
     </div>
-
 </div>
