--- a/sections/template-list-collections.liquid
+++ b/sections/template-list-collections.liquid
@@ -4,27 +4,29 @@
     <div class="max-w-6xl mx-auto my-3">
         <div class="grid grid-cols-1 md:grid-cols-3 gap-3">
             {% for collection in collections %}
-                {% if collection.all_products_count > 0 %}
-                    <div class="w-full py-6 px-3">
-                        <div class="border bg-white overflow-hidden">
-                            <a href="{{ collection.url }}">
-                                <div class="h-80 overflow-hidden">
-                                    {% if collection.featured_image != blank %}
-                                        {% assign collection_image = collection.featured_image %}
-                                    {% else %}
-                                        {% assign collection_image = collection.products.first.image %}
-                                    {% endif %}
+            {% if collection.all_products_count > 0 %}
+            <div class="w-full py-6 px-3">
+                <div class="border bg-white overflow-hidden">
+                    <a href="{{ collection.url }}">
+                        <div class="h-80 overflow-hidden">
+                            {% if collection.featured_image != blank %}
+                            {% assign collection_image = collection.featured_image %}
+                            {% else %}
+                            {% assign collection_image = collection.products.first.image %}
+                            {% endif %}
 
-                                    <img class="w-full h-full object-cover transition duration-1000 ease-in-out transform hover:scale-105" src="{{ collection_image | image_url: width: 240, height: 240 }}" alt="{{ collection.title | escape }}">
-                                </div>
-                            </a>
-
-                            <div class="p-4 bg-gray-100">
-                                <h1 class="text-xl">{{ collection.title }}</h1>
-                            </div>
+                            <img class="w-full h-full object-cover transition duration-1000 ease-in-out transform hover:scale-105"
+                                src="{{ collection_image | image_url: width: 240, height: 240 }}" width="100%"
+                                height="100%" alt="{{ collection.title | escape }}">
                         </div>
+                    </a>
+
+                    <div class="p-4 bg-gray-100">
+                        <h1 class="text-xl">{{ collection.title }}</h1>
                     </div>
-                {% endif %}
+                </div>
+            </div>
+            {% endif %}
             {% endfor %}
         </div>
     </div>
@@ -34,14 +36,14 @@
 
 {% schema %}
 {
-    "name": "Template List Collections",
-    "settings": [
-        {
-            "type": "text",
-            "id": "title",
-            "default": "Collections",
-            "label": "Title"
-        }
-    ]
+"name": "Template List Collections",
+"settings": [
+{
+"type": "text",
+"id": "title",
+"default": "Collections",
+"label": "Title"
+}
+]
 }
 {% endschema %}
